# projet_sapotache

./: CMakeLists.txt  Doxyfile  README.html  README.md  test.txt
include/ADT/: adt_coord.h  adt_list.h
include/game/: client.h  game.h  game_client.h  game_server.h  sapotache_interface.h  server.h
include/parsing/: lexer.h  parser.h  token.h  token_private.h
rapport/: rapport_consignes.txt
src/: CMakeLists.txt
src.1.0/ADT/: CMakeLists.txt  adt_coord.c  adt_list.c
src.1.0/game/: CMakeLists.txt  client.c  client_strategy.c  decriptation.c  game.c  game_client.c  game_server.c  human.c  server.c  server.c.edited
src.1.0/parsing/: CMakeLists.txt  lexer.c
src.1.0/tests/: CMakeLists.txt  game_server_test.c
src.1.0/tests/parser_examples/: sapo1.err.txt  sapo1.ok.exp  sapo2.ok.exp  sapo2.ok.txt  sapo3.err.txt  sapo3.ok.exp  sapo7.err.txt
src/game/: CMakeLists.txt  client.c  client_strategy.c  game.c  game_client.c  game_server.c  human.c  server.c
src/parsing/: parser.c
src/tests/: CMakeLists.txt  adt_list_test.c  client_server_test.c  game_server_test.c  parsing_test.c  parsing_test_cmake.sh
src/tests/parser_examples/: sapo1.ok.txt  sapo2.err.txt  sapo3.ok.txt  sapo4.err.txt  sapo5.err.txt  sapo6.err.txt
